Okay, so what I did was to create a function which makes it easier to load javascript and css into files. These are loaded correctly, and you just need to provide a css or javascripts array. If these don't exists, it still works, and it makes everything easier.
I tried to make the youtube load in a playlist, but now everything is messed up. I will fix this sooner or later, and I hope to have fixed it before I go to sleep... >.<.

Anywho, I'm sorry that I fucked your code up... Very sorry.

--- a/public/assets/css/video-finder.css
+++ b/public/assets/css/video-finder.css
@@ -1,42 +1,26 @@
-#video-finder {
+.sidebar {
+  height: 100%;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  padding: 51px 0 0 0;
+  margin: 0;
   background-color: #353535;
-  color: white;
-  padding: 0;
-  text-align: center;
+  margin: 0px;
 }
 
-#video-finder .scroll-container {
-  overflow: auto;
+.sidebar iframe {
+  border: none;
+  width: 100%;
 }
 
 #video-list {
-  margin-top: 10px;
-}
-
-#video-list .video-result td {
-  padding: 10px 20px;
-  cursor: default;
-}
-#video-list .video-result.selected td {
-  background-color: #555;
-}
-
-.video-wrapper {
-  display: none;
-  position: relative;
-  padding-bottom: 56.25%; /* 16:9 */
-  padding-top: 25px;
-  height: 0;
-}
-.video-wrapper iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
-  height: 100%;
+  color: #BABABA;
+  margin: 0px;
 }
 
-#video-preview {
+.youtube-search {
   margin: 0;
-  border: none;
 }
